--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,29 @@
-fastapi
-uvicorn
-sqlalchemy
-pydantic
-python-jose
-PyJWT
-python-multipart
+annotated-types==0.7.0
+anyio==4.9.0
+cffi==1.17.1
+click==8.1.8
+contourpy==1.3.2
+cryptography==44.0.2
+cycler==0.12.1
+fastapi==0.115.12
+fonttools==4.57.0
+h11==0.14.0
+idna==3.10
+kiwisolver==1.4.8
+matplotlib==3.10.1
+numpy==2.2.4
+packaging==24.2
+pillow==11.2.1
+pycparser==2.22
+pydantic==2.11.3
+pydantic_core==2.33.1
+PyJWT==2.10.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+starlette==0.46.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+uvicorn==0.34.1
